[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "subtain-apimatic-sdk"
description = "This is a test package publishing, Please ignore"
version = "11.1.2"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["apimatic ", "Test"]
authors = [{name = "Subtain", email = "Syed.subtain@apimatic.io"}]
urls = {Documentation = "https://apimatic.io"}
dependencies = ["apimatic-core~=0.2.0, >= 0.2.15", "apimatic-core-interfaces~=0.1.0, >= 0.1.5", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.6", "deprecation~=2.1", "python-dateutil~=2.8.1"]
classifiers = []
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
